# Tic-Tac-Pro

./: Procfile  README.md  app.json  main.py  pyproject.toml  requirements.txt
static/: connection.js  error.js  game.css  game.js  nav.css  privacy.css  sitemap.xml  style.css
templates/: base.html  game.html  index.html  join.html  navbar.html  new.html  privacy_policy.html
